Bug 298735 - DAV not working if using Swedish locale
Summary: DAV not working if using Swedish locale
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: DAV Resource (other bugs)
Version First Reported In: 4.8
Platform: Ubuntu Linux
: NOR major
Target Milestone: ---
Assignee: kdepim bugs
URL: https://bugs.launchpad.net/ubuntu/+so...
Keywords:
: 289399 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-04-24 10:49 UTC by Michael Rydén
Modified: 2015-02-11 09:29 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Can't click this if using Swedish locale (29.94 KB, image/jpeg)
2012-04-24 11:01 UTC, Michael Rydén
Details
Fix protocolName translation (7.81 KB, patch)
2013-06-24 18:44 UTC, Grégory Oestreicher
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Rydén 2012-04-24 10:49:30 UTC
When adding a DAV groupware resource (calender), it fails to sync when using other system languages (tested with Swedish) than English. Getting error 401 every time it tries to sync to the DAV resource. When trying to edit server settings of the resource, the button "Edit" wont open the settings either.

I added Kubuntu backports for oneiric and got the same problem, but I don't get error 404 any more. But still no sync, and still can't edit settings after I added the resource.

When I uninstalled Swedish locale from my computer, and rebooted, everything worked.

Reproducible: Always

Steps to Reproduce:
1. Add DAV-resource
2. Enter the details for the CalDAV-resource account
3. Save.
4. Try edit the account details, window wont open.
Actual Results:  
Nothing.

Expected Results:  
CalDAV resource should be synced.

Using Kubuntu 11.10, platform version 4.8.2.
Comment 1 Michael Rydén 2012-04-24 11:01:14 UTC
Created attachment 70626 [details]
Can't click this if using Swedish locale
Comment 2 Michael Rydén 2012-04-26 23:43:28 UTC
Just installed Precise, same problem there.
Comment 3 Grégory Oestreicher 2012-10-18 07:38:16 UTC
*** Bug 289399 has been marked as a duplicate of this bug. ***
Comment 4 Grégory Oestreicher 2012-10-20 21:46:15 UTC
I've tested with KDE 4.9.2 under OpenSuse and everything is working fine with the Swedish locale. Can you confirm that this issue is still present for you?
Comment 5 Michael Rydén 2012-10-24 16:18:52 UTC
Since Kubuntu 12.10, the way of accessing Google data has changed, so i don't use DAV to access calendar any more. So at this point I can't confim if this has been fixed in the recent update.
Comment 6 Grégory Oestreicher 2012-10-24 17:48:41 UTC
OK, I'll leave this bug open for now however just in case.
Comment 7 Andre 2012-11-06 05:43:17 UTC
Bug exists on KDE 4.9.2 openSUSE 12.2 Russian locale.
Comment 8 Andre 2012-11-06 08:11:40 UTC
Just want to add some details.
I'm trying to use DAV with the latest ownCloud 4.5.1.
CalDAV resource after creation and reopenning settings dialog becomes a CarDAV and it is not possible to edit this thing.
Comment 9 Coacher 2012-12-03 01:26:31 UTC
I confirm this with KDE SC 4.9.3 and owncloud 4.5.3. Running Gentoo amd64 with Russian locale.
Comment 10 Coacher 2012-12-03 01:33:10 UTC
(In reply to comment #9)
> I confirm this with KDE SC 4.9.3 and owncloud 4.5.3. Running Gentoo amd64
> with Russian locale.

And after removing kdepim-l10n package caldav appears as caldav and carddav  appears as carddav opposed to both davs being seen as carddavs before.
Comment 11 Aleh 2013-01-06 19:57:57 UTC
I confirm bug with openSUSE 12.1 and KDE 4.9.5
Comment 12 Andre 2013-02-06 17:38:48 UTC
Updated to KDE 4.10 today. Bug still exists :-(

Repository: KDE_Release_410
Name: akonadi
Version: 4.10.0-380.1
Arch: x86_64
Vendor: obs://build.opensuse.org/KDE
Comment 13 Yury G. Kudryashov 2013-04-26 14:50:21 UTC
It seems that I found the root of the problem. In davutils.cpp, DavUtils::protocolName() returns a localized string while protocolByName expects untranslated string.

It is easy to fix for new installations (just remove i18n() calls, will post a review request tonight) but the real problems is to migrate old data. E.g., the current code writes the localized names to config file.

On my computer, I've manually replaced old (localized) strings with the original (CalDav, CardDav) but this didn't help until I removed and recreated the resouce. Looking at the Akonadi logs, it seems that it tried to recreate a collection with the same parentId and name.
Comment 14 cyberbat 2013-06-24 13:14:28 UTC
Hi everyone.
This issue is a big deal for me, so I'm willing to pay USD 20.00 for it.
This offer is registered on FreedomSponsors (http://www.freedomsponsors.org/core/issue/282/dav-not-working-if-using-swedish-locale).
If you solve it (according to the acceptance criteria described there), please register on FreedomSponsors and mark it as resolved there
I'll then check it out and gladly pay up!

Oh, and if anyone else also wants throw in a few bucks on this, you should check out FreedomSponsors!
Comment 15 Andre 2013-06-24 17:53:10 UTC
I'm in with my $25 :-)
Comment 16 Grégory Oestreicher 2013-06-24 18:43:51 UTC
For the record here is the status of this bug:
- Yury (in comment #13) correctly identified the issue and submitted a review at http://git.reviewboard.kde.org/r/110221/
- Despite this great work there was still a bit of work to do. I sent him privately a patch to test on his system and I'm still without news from him.

I attach said patch to this report. Of course I let Yury get all the praise and money for this, I'm not commenting now to claim what's not mine; this report just totally slipped out of my mind and I haven't recontacted Yury to get some news. Just please tell if this issue is fixed now.

Cheers,
Grégory
Comment 17 Grégory Oestreicher 2013-06-24 18:44:31 UTC
Created attachment 80754 [details]
Fix protocolName translation
Comment 18 cyberbat 2013-06-24 20:04:45 UTC
I've tried patching kdepim-runtime-4.10.3 (the last stable version in gentoo) and issue seems to be fixed with russian locale. When I add new account CalDav is CalDav in settings, I can edit settings of caldav account and my calendars are synced. I will try the issue with existing account tomorrow. Thank you and especially Yuriy. I'll try to contact him myself to send money.

(In reply to comment #16)
> For the record here is the status of this bug:
> - Yury (in comment #13) correctly identified the issue and submitted a
> review at http://git.reviewboard.kde.org/r/110221/
> - Despite this great work there was still a bit of work to do. I sent him
> privately a patch to test on his system and I'm still without news from him.
> 
> I attach said patch to this report. Of course I let Yury get all the praise
> and money for this, I'm not commenting now to claim what's not mine; this
> report just totally slipped out of my mind and I haven't recontacted Yury to
> get some news. Just please tell if this issue is fixed now.
> 
> Cheers,
> Grégory
Comment 19 Grégory Oestreicher 2013-06-26 10:39:38 UTC
(In reply to comment #18)
> I've tried patching kdepim-runtime-4.10.3 (the last stable version in
> gentoo) and issue seems to be fixed with russian locale. When I add new
> account CalDav is CalDav in settings, I can edit settings of caldav account
> and my calendars are synced. I will try the issue with existing account
> tomorrow.

Thanks a lot for the feedback. Can you also update this report once you've tested with the existing resources? The tagging for 4.10.5 is tomorrow evening, and I'd like to have this patch included in it as it'll be the last of the 4.10 series.

Cheers,
Grégory
Comment 20 cyberbat 2013-06-26 13:02:06 UTC
(In reply to comment #19)
> (In reply to comment #18)
> > I've tried patching kdepim-runtime-4.10.3 (the last stable version in
> > gentoo) and issue seems to be fixed with russian locale. When I add new
> > account CalDav is CalDav in settings, I can edit settings of caldav account
> > and my calendars are synced. I will try the issue with existing account
> > tomorrow.
> 
> Thanks a lot for the feedback. Can you also update this report once you've
> tested with the existing resources? The tagging for 4.10.5 is tomorrow
> evening, and I'd like to have this patch included in it as it'll be the last
> of the 4.10 series.
> 
> Cheers,
> Grégory

Just have tested on existing resources. Seems to be fixed too.
Comment 21 Grégory Oestreicher 2013-06-26 16:27:41 UTC
Git commit 962e8c301e2c90e9caaeabbddfcb5c0e0eaf03a3 by Grégory Oestreicher.
Committed on 26/06/2013 at 16:23.
Pushed by goestreicher into branch 'KDE/4.10'.

Do not translate the protocols in the configuration

Thanks to Yury G. Kudryashov for finding the issue
and proposing an initial patch.
REVIEW: 110221

M  +35   -1    resources/dav/common/davutils.cpp
M  +12   -1    resources/dav/common/davutils.h
M  +7    -7    resources/dav/resource/configdialog.cpp
M  +1    -1    resources/dav/resource/davgroupwareresource.cpp
M  +22   -0    resources/dav/resource/settings.cpp
M  +1    -0    resources/dav/resource/settings.h

http://commits.kde.org/kdepim-runtime/962e8c301e2c90e9caaeabbddfcb5c0e0eaf03a3
Comment 22 Tom Kijas 2015-02-10 07:33:10 UTC
It occured again in 4.13.3 and 4.14.2, the tasks do not show in Korganizer if connected properly via CalDAV.

It's occuring in 4 computers.

Thunderbird with lightning works.
Comment 23 Michael Rydén 2015-02-11 09:29:35 UTC
(In reply to Tom Kijas from comment #22)
> It occured again in 4.13.3 and 4.14.2, the tasks do not show in Korganizer
> if connected properly via CalDAV.
> 
> It's occuring in 4 computers.
> 
> Thunderbird with lightning works.

That sounds like a different bug that the one I reported? The bug concerning the locale problem is fixed as far as I know (works here with DAV and OwnCloud).