Do not translate the protocols in the configuration

Thanks to Yury G. Kudryashov for finding the issue
and proposing an initial patch.

BUG: 298735
REVIEW: 110221